--- a/.github/workflows/update_fork.yml
+++ b/.github/workflows/update_fork.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Checkout to main
+        run: git checkout main
+        
       - name: Configure git
         run: |
           git config --global user.name "Jan Gajda"
